--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -24,6 +24,9 @@
         <div class="basis-3/4">
             {{ render(controller('App\\Artists\\Infrastructure\\Symfony\\Controller\\SongController::index')) }}
         </div>
+        <div class="basis-3/4">
+            {{ render(controller('App\\Artists\\Infrastructure\\Symfony\\Controller\\AlbumController::index')) }}
+        </div>
     </div>
     <!-- logo --><!--recherche--><!----compte---->
     <!-- playlist --> <!-- liste des titres -->
